<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="150dp" />
        <Button
            android:id="@+id/poster_gallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/poster"
            android:background="@android:drawable/ic_menu_gallery"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
        <Button
            android:id="@+id/poster_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/poster"
            android:layout_below="@id/poster_gallery"
            android:background="@android:drawable/ic_menu_camera"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
        <Button
            android:id="@+id/poster_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/poster"
            android:layout_below="@id/poster_camera"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/poster_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_search"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/fix_title"
            android:text="@string/title"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/title"
            android:hint="@string/title_hint"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@id/fix_title"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/fix_author"
        android:text="@string/author"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/author"
        android:hint="@string/author_hint"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/publisher"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/publisher"
        android:hint="@string/publisher_hint"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/pub_date"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/pub_date"
        android:hint="@string/pub_date_hint"
        android:textSize="18sp"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>
    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp">-->
        <!--<Button-->
            <!--android:id="@+id/pub_date_b"-->
            <!--android:text="@string/pub_date"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#ffffff"/>-->
        <!--<TextView-->
            <!--android:id="@+id/pub_date_tv"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"/>-->
    <!--</FrameLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/save_ok"
            android:text="@string/save_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/save_cancel"
            android:text="@string/save_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>