<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/view_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
    <TextView
        android:text="@string/title"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/view_title"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/author"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/view_author"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/publisher"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/view_publisher"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/pub_date"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/view_pub_date"
        android:textSize="18sp"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/view_modify"
            android:text="@string/modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/view_comment"
            android:text="@string/commentbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>