<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/modi_poster"
            android:layout_width="100dp"
            android:layout_height="150dp" />
        <Button
            android:id="@+id/modi_poster_gallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/modi_poster"
            android:background="@android:drawable/ic_menu_gallery"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
        <Button
            android:id="@+id/modi_poster_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/modi_poster"
            android:layout_below="@id/modi_poster_gallery"
            android:background="@android:drawable/ic_menu_camera"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
        <Button
            android:id="@+id/modi_poster_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/modi_poster"
            android:layout_below="@id/modi_poster_camera"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:scaleX="0.7"
            android:scaleY="0.7"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/modi_poster_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_search"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/modi_fix_title"
            android:text="@string/title"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/modi_title"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@id/modi_fix_title"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/modi_fix_author"
        android:text="@string/author"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/modi_author"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/publisher"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/modi_publisher"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <TextView
        android:text="@string/pub_date"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>
    <EditText
        android:id="@+id/modi_pub_date"
        android:textSize="18sp"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/modi_confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
</LinearLayout>