<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/confirmpointtop"
        android:text="@string/highscore"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/confirmpointtop2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/confirmpointtop"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pointorder"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/point_orderpage"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topbottomdivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_below="@id/confirmpointtop2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_below="@id/orderitem" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_below="@id/orderitem"
            android:background="#bbbbbb"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_below="@id/orderitem"
            android:background="#bbbbbb"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_below="@id/orderitem"
            android:background="#bbbbbb"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_below="@id/orderitem" />
    </LinearLayout>

    <Button
        android:id="@+id/order_init_btn"
        android:text="@string/initpoint"
        android:textSize="13sp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"/>

    <ListView
        android:id="@+id/point_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbottomdivider"
        android:layout_above="@id/order_init_btn"
        android:layout_marginBottom="8dp"
        android:divider="#ffffff"></ListView>
</RelativeLayout>